Alignment correction

--- a/resources/css/desktop.css
+++ b/resources/css/desktop.css
@@ -162,8 +162,8 @@
 
  .information .information-right-bar{
    width:26.4rem;
-
  }
+
  .information .information-right-bar .info{
    height:11.25rem;
    width:100%;
@@ -288,8 +288,11 @@
  .thesis-main{
  width:100%;
  display: flex;
+ align-items: flex-start;
      }
  .thesis-main video{
+   margin:1rem;
+   border:4px solid #5E7C42;
   width:60%;
             }
  .thesis .thesis-side-bar{
@@ -301,7 +304,6 @@
    border:1px solid  #7F7A8A;
    margin-top: 1rem;
    margin-bottom: 1rem;
-   margin-left: 1rem;
    display: flex;
 
 }
